# r86

./: .gitignore  Cargo.toml  LICENSE.md  README.md  example.asm
programmer/include/: AT28C256.h  Button.h  CLI.h
programmer/src/: AT28C256.cpp  CLI.cpp  button.cpp  main.cpp  microcodes.S
r86-asm/: Cargo.toml
r86-asm/src/: assembly.rs  compiler.rs  context.rs  error.rs  instruction.rs  lexer.rs  lib.rs  linker.rs  main.rs  parser.rs  result.rs  statement.rs  text.rs  token.rs
r86-asm/src/compiler/: binary.rs  macros.rs  opcode.rs  operand.rs  section.rs  unlinked_binary.rs  vars.rs
r86-asm/src/instruction/: operand.rs
r86-asm/src/lexer/: token.rs
r86-asm/src/linker/: firmware.rs
r86-asm/src/parser/: statement.rs  syntax_rule.rs
r86-asm/src/parser/statement/: expression.rs  instruction.rs  label.rs  literal.rs
r86-asm/src/parser/statement/expression/: algorithms.rs
r86-asm/src/parser/statement/instruction/: operand.rs
r86-asm/src/result/: error.rs
r86-asm/src/result/error/: reference.rs
r86-asm/src/statement/: expression.rs
r86-prom/: Cargo.toml
r86-prom/src/: cli.rs  error.rs  lib.rs  main.rs  message.rs  programmer.rs  task.rs
r86-prom/src/cli/: utils.rs
r86-sim/: Cargo.toml
r86-sim/src/: biu.rs  bus.rs  clock.rs  error.rs  lib.rs  main.rs  processor.rs
r86-sim/src/biu/: adder.rs  queue.rs
r86-sim/src/processor/: biu.rs  eu.rs
r86-sim/src/processor/biu/: adder.rs  queue.rs
r86-sim/src/processor/eu/: alu.rs  microcode.rs
