[package]
name = "r86-prom"
version = "0.1.0"
authors = ["McLytar <gianluca.brian.94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
console = "0.14.0"
indicatif = "0.15.0"
rand = "0.8.3"
serialport = "4.0.0"
tokio = { version = "1", features = ["full"] }